fix overflow

--- a/calculadora.css
+++ b/calculadora.css
@@ -39,4 +39,10 @@
     font-size: 25px;
     text-align: right;
     padding: 5px;
+    overflow-y: hidden;
+    overflow-x: auto;
+}
+::-webkit-scrollbar{
+    width: 5px;
+    height: 4px;
 }
